updated bio / cv

--- a/index.html
+++ b/index.html
@@ -172,6 +172,47 @@
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img draggable="false" src='imgs/interactions.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            ProxySPEX: Inference-Efficient Interpretability via Sparse Feature Interactions in LLMs
+                        </div>
+                        <div class='paper-desc'>
+                            ArXiv, 2025
+                        </div>
+                        <div class='paper-authors'>
+                                Landon Butler*, Abhineet Agarwal*, Justin Singh Kang*,  Yigit Efe Erginbas, Kannan Ramchandran, and Bin Yu
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2505.17495" target="_blank">Paper</a>
+                        </div>
+                    </div>
+                </div>
+
+                                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img draggable="false" src='imgs/interactions.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            SPEX: Scaling Feature Interaction Explanations for LLMs
+                        </div>
+                        <div class='paper-desc'>
+                            ICML, 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Justin Singh Kang*, Landon Butler*, Abhineet Agarwal*, Yigit Efe Erginbas, Kannan Ramchandran, and Bin Yu
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2502.13870" target="_blank">Paper</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
