--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img draggable="false" src='imgs/interactions.png' class='img-fluid'>
+                        <img draggable="false" src='imgs/proxy_spex.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
@@ -195,7 +195,7 @@
 
                                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <img draggable="false" src='imgs/interactions.png' class='img-fluid'>
+                        <img draggable="false" src='imgs/trolley.png' class='img-fluid'>
                     </div>
 
                     <div class="col">
