--- a/index.html
+++ b/index.html
@@ -163,10 +163,12 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I am a third year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
+                    My research focuses on developing trustworthy machine learning, with an emphasis on methods that <b><i>interpret</i></b> and <b><i>explain</i></b> the complex decision-making processes of foundation models, using techniques from signal processing and game theory.
+                    </p>
+                     <p>
+                    I am a fourth year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
                     Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
                     where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
-                    My research lies at the intersection of machine learning, signal processing, and game theory, inspired by applications in interpretability of foundation models.
                 </p>
 
                 <div class='vspace-top'>
