--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@
                     My research focuses on developing trustworthy machine learning, with an emphasis on methods that <b><i>interpret</i></b> and <b><i>explain</i></b> the complex decision-making processes of foundation models, using techniques from signal processing and game theory.
                     </p>
                      <p>
-                    I am a fourth year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a> and supported by an NSF Graduate Research Fellowship.
-                    Previously, I completed my Master's in Data Science and my Bachelor's in Systems Engineering at the University of Pennsylvania,
-                    where I researched under the supervision of <a href="https://alelab.seas.upenn.edu/alejandro-ribeiro/" target="_blank">Alejandro Ribeiro</a>.
+                    I am a fourth year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a>. I am an NSF Graduate Research Felllow and have interned with Apple and Uber AI.
                 </p>
 
                 <div class='vspace-top'>
