--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     My research focuses on developing trustworthy machine learning, with an emphasis on methods that <b><i>interpret</i></b> and <b><i>explain</i></b> the complex decision-making processes of foundation models, using techniques from signal processing and game theory.
                     </p>
                      <p>
-                    I am a fourth year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a>. I am an NSF Graduate Research Felllow and have interned with Apple and Uber AI.
+                    I am a fourth year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a>. I am an NSF Graduate Research Fellow and have interned with Apple and Uber AI.
                 </p>
 
                 <div class='vspace-top'>
