--- a/index.html
+++ b/index.html
@@ -182,10 +182,13 @@
                             ProxySPEX: Inference-Efficient Interpretability via Sparse Feature Interactions in LLMs
                         </div>
                         <div class='paper-desc'>
-                            ArXiv, 2025
+                            NeurIPS, 2025
                         </div>
                         <div class='paper-authors'>
                                 Landon Butler*, Abhineet Agarwal*, Justin Singh Kang*,  Yigit Efe Erginbas, Kannan Ramchandran, and Bin Yu
+                        </div>
+                        <div class='paper-award'>
+                            Spotlight
                         </div>
                         <div>
                             <a href="https://arxiv.org/abs/2505.17495" target="_blank">Paper</a>
