--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                             Spotlight
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2505.17495" target="_blank">Paper</a>
+                            <a href="https://arxiv.org/abs/2505.17495" target="_blank">Paper</a> |
+                            <a href="docs/ProxySPEX.pdf" target="_blank">Poster</a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +213,8 @@
                             Justin Singh Kang*, Landon Butler*, Abhineet Agarwal*, Yigit Efe Erginbas, Kannan Ramchandran, and Bin Yu
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2502.13870" target="_blank">Paper</a>
+                            <a href="https://arxiv.org/abs/2502.13870" target="_blank">Paper</a> |
+                            <a href="docs/SPEX.pdf" target="_blank">Poster</a>
                         </div>
                     </div>
                 </div>
@@ -233,7 +235,8 @@
                             Justin Singh Kang, Yigit Efe Erginbas, Landon Butler, Ramtin Pedarsani, and Kannan Ramchandran
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2402.02631" target="_blank">Paper</a>
+                            <a href="https://arxiv.org/abs/2402.02631" target="_blank">Paper</a> |
+                            <a href="docs/Mobius.pdf" target="_blank">Poster</a>
                         </div>
                     </div>
                 </div>
@@ -257,7 +260,8 @@
                             Landon Butler, Alejandro Parada-Mayorga, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://ieeexplore.ieee.org/document/10076894" target="_blank">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/document/10076894" target="_blank">Paper</a> |
+                            <a href="docs/Multigraphs.pdf" target="_blank">Poster</a>
                         </div>
                     </div>
                 </div>
@@ -281,7 +285,8 @@
                             Alejandro Parada-Mayorga, Landon Butler, and Alejandro Ribeiro
                         </div>
                         <div>
-                            <a href="https://ieeexplore.ieee.org/document/10183724" target="_blank">Paper</a>
+                            <a href="https://ieeexplore.ieee.org/document/10183724" target="_blank">Paper</a> |
+                            <a href="docs/NonCommutative.pdf" target="_blank">Poster</a>
                         </div>
                     </div>
                 </div>
