--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <div class='row vspace-top vspace-bottom'>
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
-                <p>
-                    My research focuses on developing trustworthy machine learning, with an emphasis on methods that <b><i>interpret</i></b> and <b><i>explain</i></b> the complex decision-making processes of foundation models, using techniques from signal processing and game theory.
+                    <p>
+                        My research focuses on developing <b>trustworthy machine learning</b>, with an emphasis on methods that <b>interpret</b> the complex decision-making processes of <b>foundation models</b>. Recently, I have pursued a <i>data-centric perspective</i>, seeking to understand and refine model behavior through <b><i>data attribution and selection</i></b>.
                     </p>
                      <p>
                     I am a fourth year Ph.D. student in EECS at Berkeley, advised by <a href="http://people.eecs.berkeley.edu/~kannanr/" target="_blank">Kannan Ramchandran</a>. I am an NSF Graduate Research Fellow and have interned with Apple and Uber AI.
