--- a/index.html
+++ b/index.html
@@ -172,6 +172,28 @@
                 <div class='vspace-top'>
                     <h1>Publications</h1>
                 </div>
+
+                <div class='row vspace-top'>
+                    <div class="col-sm-3">
+                        <img draggable="false" src='imgs/oddshap.png' class='img-fluid'>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            An Odd Estimator for Shapley Values
+                        </div>
+                        <div class='paper-desc'>
+                            ArXiv, 2026
+                        </div>
+                        <div class='paper-authors'>
+                            Fabian Fumagalli, Landon Butler, Justin Singh Kang,  Kannan Ramchandran, and R. Teal Witter
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2602.01399" target="_blank">Paper</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <img draggable="false" src='imgs/proxy_spex.png' class='img-fluid'>
